--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "bulma": "^0.9.2",
+    "axios": "^0.19.2",
+    "moment": "^2.29.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0"
