--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack -p --env.NODE_ENV=production",
-    "serve": "webpack-dev-server --mode=development --env.NODE_ENV=local"
+    "serve": "webpack-dev-server --mode=development --env.NODE_ENV=local",
+    "deploy": "yarn build && gh-pages -d dist"
   },
   "author": "",
   "license": "ISC",
@@ -29,6 +30,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bulma": "^0.9.2",
+    "gh-pages": "^3.1.0",
     "moment": "^2.29.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
